# vibe-council

./: .env.example  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
backend/: __init__.py  cli.py  config.py  context_pack.py  council.py  decision_memory.py  decisions_docs.py  doctor.py  guards.py  main.py  mcp_contract.py  mcp_server.py  mcp_stdio.py  openrouter.py  operator.py  preferences.py  project_workspace.py  providers.py  redaction.py  storage.py  workbench_auditor.py  workbench_commands.py  workbench_executor.py  workbench_orchestrator.py  workbench_panel.py  workbench_payloads.py  workbench_proposal_importer.py  workbench_proposals.py  workbench_runtime.py  workbench_trust.py
docs/: agent-integrations.md  agent-quickstart.md  demo-transcript.md  demo.md  redaction-policy.md  release-checklist.md  workbench-agent-bridge.md
examples/: README.md
scripts/: install-vibe.ps1  install-vibe.sh  vibe.cmd  vibe.ps1  vibe.sh
tests/: README.md  test_cli_preferences.py  test_cli_smoke.py  test_cli_ux.py  test_context_check.py  test_context_export.py  test_context_export_agents.py  test_context_pack.py  test_cost_messaging.py  test_council_ranking.py  test_decisions_docs.py  test_decisions_extract.py  test_decisions_promote.py  test_doctor.py  test_examples_docs.py  test_init_agent.py  test_install_scripts.py  test_localhost_guard.py  test_mcp_contract.py  test_mcp_server.py  test_mcp_stdio.py  test_no_dev_paths.py  test_ollama_provider.py  test_operator.py  test_preferences.py  test_preferences_isolation.py  test_providers.py  (+17 more)
(+159 files in other folders)
