[project]
name = "vibe-council"
version = "0.3.0"
description = "Local-first AI council workflow tool with CLI, decision memory, guardrails, and provider roadmap."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]
